# babylon

./: .clang-format  .editorconfig  .gitignore  .gitmodules  BabylonCMakePresets.json  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  meson.build  meson.options
cmake/: babylon.cmake
cmake/cfg/: app_cfg.cmake  babylon_app_cfg.cmake  babylon_defines_cfg.cmake  babylon_global_cfg.cmake  babylon_module_cfg.cmake  common_cfg.cmake  module_cfg.cmake  unit_cfg.cmake
cmake/cfg/msvc/: babylon_app_cfg.cmake  babylon_module_cfg.cmake
cmake/modules/: app.cmake  babylon.cmake  babylon_app.cmake  babylon_log.cmake  babylon_module.cmake  babylon_source.cmake  cfg.cmake  common.cmake  log.cmake  modules.cmake  sources.cmake  units.cmake
cmake/modules/cfg/: babylon_app_cfg.cmake  babylon_module_cfg.cmake
cmake/presets/: common.json  mac.json  win.json
demo/: CMakeLists.txt  meson.build
demo/modules/: app.ixx
demo/modules/app/: app_configurator.ixx
demo/src/: pch.h
demo/src/App/: AppConfigurator.cpp  AppConfigurator.h  Main.cpp
demo/src/app/: app_configurator.cpp  app_configurator.h  main.cpp
demo/tools/cmake/: cfg.cmake
include/: pch.h
include/Common/: Singleton.h
include/IO/: IInputHandler.h
include/Place/: Place.h  PlaceManager.h  PlaceNode.h
include/Platform/: Entry.h  IPlatformContext.h  Main.h  Platform.h
include/Platform/mac/: AppDelegate.h  PlatformContext.h
include/System/: App.h  AppArguments.h  AppLoopController.h  Babylon.h  Core.h  Defines.h  DrawListController.h  Entry.h  IAppConfigurator.h  IAppController.h  IAppDelegate.h  IAppLoopController.h  IConfigurator.h  IDrawable.h  ISystemDelegate.h  ISystemSignalHandler.h  IUpdatable.h  UpdateListController.h
modules/: meson.build
modules/system/: CMakeLists.txt  meson.build
modules/system/include/: pch.h
modules/system/include/IO/: IInputHandler.h
modules/system/include/Place/: PlaceNodeView.h  PlaceView.h
modules/system/include/Platform/: Main.h
modules/system/include/System/: IAppConfigurator.h  IUpdatable.h
modules/system/include/babylon/: entry.h
modules/system/include/babylon/common/: singleton.h
modules/system/include/babylon/io/: input_handler_iface.h
modules/system/include/babylon/place/: place.h  place_manager.h  place_node.h  place_node_view.h  place_view.h
modules/system/include/babylon/place/platform/mac/: place_impl.h
modules/system/include/babylon/place/platform/win/: place_view_impl.h
modules/system/include/babylon/platform/: main.h
modules/system/include/babylon/platform/mac/: app_delegate.h  view_controller.h
modules/system/include/babylon/system/: app.h  app_arguments.h  app_configurator_iface.h  app_controller_iface.h  babylon.h  drawable_iface.h  system_signal_handler_iface.h  updatable_iface.h
modules/system/include/babylon/system/platform/mac/: app_controller_impl.h
modules/system/include/babylon/system/platform/win/: app_controller_impl.h
modules/system/modules/: common.ixx  system.ixx
modules/system/modules/common/: std.ixx
modules/system/modules/system/: app.ixx  app_arguments.ixx  app_configurator_iface.ixx
modules/system/modules/system/platform/: app_impl.ixx
modules/system/src/: pch.h
modules/system/src/Place/: PlaceManager.cpp
modules/system/src/Place/Platform/Mac/: PlaceImpl.mm
modules/system/src/System/: AppArguments.cpp  PlaceManager.cpp
modules/system/src/babylon/: entry.h
modules/system/src/babylon/place/: meson.build  place.h  place_manager.h  place_view.cpp  place_view.h
modules/system/src/babylon/place/platform/: meson.build  place_impl.h  place_view_impl.h
modules/system/src/babylon/place/platform/mac/: bln_window_controller.h  bln_window_controller.mm  place_impl.h  place_impl.mm  place_view_impl.h  place_view_impl.mm  view_controller.mm
modules/system/src/babylon/place/platform/win/: place_impl.cpp  place_view_impl.cpp
modules/system/src/babylon/platform/: app_impl.h  main.h  platform.h
modules/system/src/babylon/platform/mac/: app_delegate.mm  app_impl.mm  app_loop_controller.h  app_loop_controller.mm  view_controller.h
modules/system/src/babylon/platform/win/: app_impl.cpp
modules/system/src/babylon/system/: app.cpp  app.h  app_arguments.h  meson.build
modules/system/src/babylon/system/platform/: app_impl.h  main.h  meson.build
modules/system/src/babylon/system/platform/mac/: app_impl.mm  bln_app_delegate.h  bln_app_delegate.mm  bln_loop_controller.h  bln_loop_controller.mm
modules/system/src/babylon/system/platform/win/: app_impl.cpp  app_impl.h
modules/system/src/place/: place.cpp  place_manager.cpp  place_node.cpp  place_node_view.cpp  place_view.cpp
modules/system/src/place/platform/mac/: place_impl.mm  place_view_impl.mm
modules/system/src/place/platform/win/: place_view_impl.cpp
modules/system/src/platform/apple/mac/: app_delegate.mm
modules/system/src/platform/mac/: app_delegate.mm  view_controller.mm
modules/system/src/system/: app.cpp  app_arguments.cpp  place_manager.cpp
modules/system/src/system/platform/mac/: app_controller_impl.mm  app_impl.mm
modules/system/src/system/platform/win/: app_controller_impl.cpp  app_impl.cpp
modules/system/tools/cmake/: cfg.cmake
modules/ui/: CMakeLists.txt  meson.build
modules/ui/include/babylon/: dummy.h
modules/ui/src/: dummy.cpp
src/Place/: PlaceNode.cpp  PlaceNodeView.cpp  PlaceView.cpp
src/Platform/mac/: AppDelegate.mm  Entry.mm  PlatformContext.cpp  ViewController.mm
src/Platform/win/: Entry.cpp
src/System/: App.cpp  AppArguments.cpp  AppLoopController.cpp  Core.cpp  DrawListController.cpp  UpdateListController.cpp
tools/cmake/: cfg.cmake
tools/cmake/modules/: cfg.cmake  common.cmake  log.cmake  sources.cmake  units.cmake
tools/cmake/presets/: common.json  mac.json  win.json
tools/environment/: init.command
tools/environment/scripts/: init.py
tools/generators/: gen_mac_xcode.command  gen_win_vs_clang.cmd  gen_win_vs_msvc.cmd  gen_win_vs_msvc_demo.cmd  regen_win.cmd
tools/meson/: babylon.meson
tools/meson/presets/: asan.ini  babylon.ini  (+2 more)
tools/scripts/: fix_vs_project_filters.py
(+20 files in other folders)
