################################################################################
# Source files
################################################################################
unit_source_files += files(
    'place.h',
    'place.cpp',
    'place_view.h',
    'place_view.cpp',
    'place_manager.h',
    'place_manager.cpp',
)

subdir('platform')
