################################################################################
# Source files
################################################################################
unit_source_files += files(
    'app.h',
    'app.cpp',
    'app_arguments.h',
    'app_arguments.cpp',
    'app_configurator_iface.h',
)

subdir('platform')
